--- a/main.css
+++ b/main.css
@@ -40,17 +40,15 @@ body {
   grid-template: repeat(30, 1fr) / repeat(30, 1fr);
 }
 
-.play-board .cell {
-  border: 1px solid white;
+.play-board .obstacle {
+  font-size: 2.5rem;
+  /* color: yellow; */
 }
-.play-board .food {
-  background: red;
-}
-.play-board .special_food {
-  background: purple;
-}
-.play-board .head {
-  background: green;
+.gradient-text {
+  font-weight: bold; /* Make text bold */
+  background: linear-gradient(35deg, red, yellow); /* Gradient colors */
+  -webkit-text-fill-color: transparent; /* Make text color transparent */
+  background-clip: text; /* Non-prefixed version for other browsers */
 }
 
 @media screen and (max-width: 800px) {
