--- a/main.css
+++ b/main.css
@@ -33,6 +33,33 @@ body {
   display: flex;
   justify-content: space-between;
 }
+
+.obstacles {
+  width: 4rem;
+}
+
+input {
+  border: none;
+  width: 3.75rem;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield; /* For Firefox */
+  -webkit-appearance: none; /* For Chrome, Safari, and newer Edge */
+  appearance: none;
+}
+
+/* Hide the arrows for Firefox */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+button {
+  margin: 1px;
+}
+
 .play-board {
   height: 100%;
   width: 100%;
