--- a/main.css
+++ b/main.css
@@ -29,7 +29,7 @@ body {
   font-weight: 500;
   font-size: 1.2rem;
   padding: 20px 27px;
-  height: fit-content;
+  height: auto;
   display: flex;
   justify-content: space-between;
 }
@@ -54,6 +54,11 @@ input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+.form-check-input:focus {
+  border: none;
+  box-shadow: none;
 }
 
 button {
